# dy_1

./: .gitignore  android_web_key.jks  build.gradle  configs.gradle  gradle.properties  local.properties  settings.gradle  wccdebug.jks
BaseJniLib/: Readme.md  build.gradle
BaseJniLib/src/main/: AndroidManifest.xml
BaseJniLib/src/main/cpp/: AES.cpp  Base64.cpp  BaseJni.cpp  BaseJniLib.cpp  CMakeLists.txt  DYTJPGHelper.cpp  jpegext.cpp
BaseJniLib/src/main/cpp/include/: AES.h  AllBase.h  DYTJPGHelper.h  jpegext.h
BaseLib/: build.gradle
BaseLib/src/main/: AndroidManifest.xml
BaseLib/src/main/res/layout/: doodle_create_text.xml
BaseLib/src/main/res/values/: attrs.xml  colors.xml  strings.xml
Build_So/: build.gradle  readme.md
Build_So/src/main/: AndroidManifest.xml
Build_So/src/main/cpp/: Build_So.cpp  CMakeLists.txt
BusinessLib/: build.gradle
BusinessLib/src/main/: AndroidManifest.xml
CameraCommon/: build.gradle  configs.gradle  consumer-rules.pro
CameraCommon/src/main/: AndroidManifest.xml
CameraCommon/src/main/res/values/: attrs.xml
GestureDetectorBusiness/: build.gradle
GestureDetectorBusiness/src/main/: AndroidManifest.xml
GestureDetectorBusiness/src/main/res/values/: dimens.xml
LibUvcCamera/: build.gradle
LibUvcCamera/src/main/: AndroidManifest.xml
LibUvcCamera/src/main/jni/UVCCamera/: CMakeLists.txt  FrameImage.cpp  FrameImage.h  Parameters.cpp  Parameters.h  UVCCamera.rar  UVCPreviewIR.cpp  serenegiant_usb_UVCCamera.cpp
LibUvcCamera/src/main/jni/UVCCamera/include/: thermometry.h
LibUvcCamera/src/main/res/layout/: dialog_camera.xml
PhotoHelper/src/main/: AndroidManifest.xml
UvcConnect/: build.gradle  consumer-rules.pro
UvcConnect/src/main/: AndroidManifest.xml
UvcConnect/src/main/jni/UVCCamera/: AES.cpp  AES.h  Base64.h  CMakeCache.txt  CMakeLists.txt  DytOrderHelper.cpp  DytOrderHelper.h  FrameImage.cpp  FrameImage.h  UVCCamera.cpp  UVCCamera.h  UVCPreviewIR.cpp  UVCPreviewIR.h  jpegext.cpp  serenegiant_usb_UVCCamera.cpp
UvcConnect/src/main/res/layout/: dialog_camera.xml
UvcConnect/src/main/res/values/: color.xml  strings.xml
UvcConnect/src/main/res/xml/: device_filter.xml
app/: 583&586 APP 语言翻译列表-20220711(1).xlsx  build.gradle  proguard-rules.pro  点扬H2F项目分支详情合表.xlsx  项目分支详情合表_外发.xlsx
app/libs/: libusbirsdk.aar
app/release/: output-metadata.json
app/src/: readme
app/src/dytPir/: AndroidManifest.xml
app/src/dytPir/assets/: configs_dyt.txt
app/src/dytPir/res-dyt/mipmap-anydpi-v26/: ic_logo_dyt_round.xml
app/src/dytPir/res-dyt/values/: ic_logo_dyt_background.xml  strings.xml
app/src/dytPir/res-dyt/values-zh/: strings.xml
app/src/dytPir/res-dyt/xml/: dy_device_filter.xml
app/src/heika/: AndroidManifest.xml
app/src/heika/res-heika/values-zh/: strings.xml
app/src/heika/res-heika/xml/: dy_device_filter.xml  file_paths.xml
app/src/henxtech/: AndroidManifest.xml
app/src/henxtech/assets/: configs_henxtech.txt
app/src/henxtech/res-henxtech/mipmap-anydpi-v26/: ic_logo_henxtech.xml
app/src/henxtech/res-henxtech/values/: ic_logo_henxtech_background.xml  strings.xml
app/src/henxtech/res-henxtech/values-zh/: strings.xml
app/src/henxtech/res-henxtech/xml/: file_paths.xml
app/src/jmsPir/: AndroidManifest.xml
app/src/jmsPir/res-jms/mipmap-anydpi-v26/: ic_launcher_jms_round.xml  ic_logo_jms.xml
app/src/jmsPir/res-jms/values/: ic_logo_jms_background.xml  strings.xml
app/src/jmsPir/res-jms/values-ja-rJP/: strings.xml
app/src/jmsPir/res-jms/values-zh/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 9.txt  configs.txt
app/src/main/res-jms/layout/: pop_setting.xml
app/src/main/res-jms/mipmap-anydpi-v26/: icon_launcher_jms.xml
app/src/main/res-jms/values/: strings.xml
app/src/main/res-jms/values-zh/: strings.xml
app/src/main/res/color/: btn_cancel_color_selector.xml  switch_text_selector.xml
app/src/main/res/drawable/: bg_define_my_toggle_toggle.xml  bg_main_gallery_bt_radius.xml  bg_main_preview_over_temp_alarm.xml  bg_main_preview_overtemp_pop.xml  bg_main_preview_setting_pop.xml  bg_main_prewview_setting_language_press.xml  bg_main_prewview_setting_language_unpress.xml  bg_setting_language_toggle.xml  btn_confirm_selector.xml  ic_highlowtemp_high_select_1.xml  ic_highlowtemp_high_unselect_1.xml  ic_highlowtemp_low_select_1.xml  ic_highlowtemp_low_unselect_1.xml  ic_main_gallery_bt_all_media_select.xml  ic_main_gallery_bt_all_media_unselect.xml  ic_main_gallery_bt_all_select.xml  ic_main_gallery_bt_all_unselect.xml  ic_main_gallery_bt_delete_select.xml  ic_main_gallery_bt_delete_unselect.xml  ic_main_gallery_bt_image_select.xml  ic_main_gallery_bt_image_unselect.xml  ic_main_gallery_bt_video_select.xml  ic_main_gallery_bt_video_unselect.xml  ic_main_gallery_item_checkbox_select.xml  ic_main_gallery_item_checkbox_unselect.xml  ic_main_gallery_iv_back_pressed.xml  ic_main_gallery_iv_back_unpressed.xml  (+118 more)
app/src/mileseey/: AndroidManifest.xml
app/src/mileseey/assets/: configs_mileseey.txt
app/src/ms_ti256/: AndroidManifest.xml
app/src/ms_ti256/assets/: configs_ms_ti256.txt
app/src/mti448/assets/: configs_mti448.txt
app/src/neutral/: AndroidManifest.xml
app/src/qianli/: AndroidManifest.xml
app/src/qianli/assets/: configs_qianli.txt
app/src/radifeel/: AndroidManifest.xml
app/src/radifeel/assets/: configs_radifeel.txt
app/src/teslong/: AndroidManifest.xml
app/src/teslong/assets/: configs_teslong.txt
app/src/victorPir/: AndroidManifest.xml
app/src/victorPir/assets/: configs_victor.txt
app/src/votin/: AndroidManifest.xml
app/src/votin/assets/: configs_votin.txt
common/: build.gradle  consumer-rules.pro
common/src/main/: AndroidManifest.xml
easyphotos/: build.gradle  consumer-rules.pro
easyphotos/src/main/: AndroidManifest.xml
easyphotos/src/main/cpp/: CMakeLists.txt  PhotoHelper.cpp  easyphotos.cpp  jpegext.cpp
easyphotos/src/main/cpp/include/: PhotoHelper.h
gradle/wrapper/: gradle-wrapper.properties
matisse/: build.gradle  consumer-rules.pro  proguard-rules.pro
matisse/src/main/: AndroidManifest.xml
(+739 files in other folders)
